	--- 9.10.0a1 released ---

3661.	[bug]		Address lock order reversal deadlock with inline zones.
			[RT #34856]

3660.	[cleanup]	Changed the name of "isc-config.sh" to "bind9-config".
			[RT #23825]

3659.	[port]		solaris: don't add explict dependancies/rules for
			python programs as make won't use the implicit rules.
			[RT #34835]

3658.	[port]		linux: Address platform specific compilation issue
			when libcap-devel is installed. [RT #34838]

3657.	[port]		Some readline clones don't accept NULL pointers when
			calling add_history. [RT #34842]

3656.	[bug]		Treat an all zero netmask as invalid when generating
			the localnets acl. [RT #34687]

3655.	[cleanup]	Simplify TCP message processing when requesting a
			zone transfer.  [RT #34825]

3654.	[bug]		Address race condition with manual notify requests.
			[RT #34806]

3653.	[func]		Create delegations for all "children" of empty zones
			except "forward first". [RT #34826]

3652.	[bug]		Address bug with rpz-drop policy. [RT #34816]

3651.	[tuning]	Adjust when a master server is deemed unreachable.
			[RT #27075]

3650.	[tuning]	Use separate rate limiting queues for refresh and
			notify requests. [RT #30589]

3649.	[cleanup]	Include a comment in .nzf files, giving the name of
			the associated view. [RT #34765]

3648.	[test]		Updated the ATF test framework to version 0.17.
			[RT #25627]

3647.	[bug]		Address a race condition when shutting down a zone.
			[RT #34750]

3646.	[bug]		Journal filename string could be set incorrectly,
			causing garbage in log messages. [RT #34738]

3645.	[protocol]	Use case sensitive compression when responding to
			queries. [RT #34737]

3644.	[protocol]	Check that EDNS subnet client options are well formed.
			[RT #34718]

3643.	[doc]		Clarify RRL "slip" documentation.

3642.	[func]		Allow externally generated DNSKEY to be imported
			into the DNSKEY management framework.  A new tool
			dnssec-importkey is used to do this. [RT #34698]
